// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FILEINFO_FITS_MULTIHDU: Testing if info of an FITS image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : spire500_ext.fits FileInfoExtended of '1': assert FILE_INFO_RESPONSE.file_info_extended.computed_entries 1`] = `
Array [
  Object {
    "name": "Name",
    "value": "spire500_ext.fits",
  },
  Object {
    "name": "HDU",
    "value": "1",
  },
  Object {
    "name": "Extension name",
    "value": "image",
  },
  Object {
    "name": "Shape",
    "value": "[830, 870]",
  },
  Object {
    "name": "Coordinate type",
    "value": "Right Ascension, Declination",
  },
  Object {
    "name": "Projection",
    "value": "TAN",
  },
  Object {
    "name": "Image reference pixels",
    "value": "[371, 421]",
  },
  Object {
    "name": "Image reference coords",
    "value": "[07:09:13.1081, -010.36.38.5952]",
  },
  Object {
    "name": "Image ref coords (deg)",
    "value": "[107.305 deg, -10.6107 deg]",
  },
  Object {
    "name": "Pixel increment",
    "value": "-14\\", 14\\"",
  },
  Object {
    "name": "Celestial frame",
    "value": "FK5, J2000",
  },
  Object {
    "name": "Pixel unit",
    "value": "MJy/sr",
  },
]
`;

exports[`FILEINFO_FITS_MULTIHDU: Testing if info of an FITS image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : spire500_ext.fits FileInfoExtended of '1': assert FILE_INFO_RESPONSE.file_info_extended.header_entries 1`] = `
Array [
  Object {
    "comment": "Standard FITS",
    "entryType": "INT",
    "name": "SIMPLE",
    "numericValue": 1,
    "value": "T",
  },
  Object {
    "entryType": "INT",
    "name": "BITPIX",
    "numericValue": -64,
    "value": "-64",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS",
    "numericValue": 2,
    "value": "2",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS1",
    "numericValue": 830,
    "value": "830",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS2",
    "numericValue": 870,
    "value": "870",
  },
  Object {
    "comment": "PHYSICAL = PIXEL*BSCALE + BZERO",
    "entryType": "FLOAT",
    "name": "BSCALE",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "BZERO",
    "value": "0.000000000000E+00",
  },
  Object {
    "name": "BTYPE",
    "value": "Intensity",
  },
  Object {
    "name": "OBJECT",
  },
  Object {
    "comment": "Brightness (pixel) unit",
    "name": "BUNIT",
    "value": "MJy/sr",
  },
  Object {
    "entryType": "FLOAT",
    "name": "EQUINOX",
    "numericValue": 2000,
    "value": "2000",
  },
  Object {
    "name": "RADESYS",
    "value": "FK5",
  },
  Object {
    "entryType": "FLOAT",
    "name": "LONPOLE",
    "numericValue": 180,
    "value": "1.800000000000E+02",
  },
  Object {
    "entryType": "FLOAT",
    "name": "LATPOLE",
    "numericValue": -10.610720896516849,
    "value": "-1.061072089652E+01",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC1_1",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC2_1",
    "value": "-0.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC1_2",
    "value": "0.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC2_2",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "name": "CTYPE1",
    "value": "RA---TAN",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRVAL1",
    "numericValue": 107.30461727023817,
    "value": "1.073046172702E+02",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CDELT1",
    "numericValue": -0.003888888888889,
    "value": "-3.888888888889E-03",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRPIX1",
    "numericValue": 371,
    "value": "371",
  },
  Object {
    "name": "CUNIT1",
    "value": "deg",
  },
  Object {
    "name": "CTYPE2",
    "value": "DEC--TAN",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRVAL2",
    "numericValue": -10.610720896516849,
    "value": "-1.061072089652E+01",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CDELT2",
    "numericValue": 0.003888888888889,
    "value": "3.888888888889E-03",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRPIX2",
    "numericValue": 421,
    "value": "421",
  },
  Object {
    "name": "CUNIT2",
    "value": "deg",
  },
  Object {
    "name": "LONGSTRN",
    "value": "OGIP 1.0",
  },
  Object {
    "name": "EXTNAME",
    "value": "image",
  },
  Object {
    "name": "CLASS___",
    "value": "herschel.ia.dataset.ArrayDataset",
  },
  Object {
    "name": "INFO____",
    "value": "Image",
  },
  Object {
    "name": "DATA____",
    "value": "herschel.ia.numeric.Double2d",
  },
  Object {
    "name": "QTTY____",
    "value": "MJy/sr",
  },
  Object {
    "entryType": "INT",
    "name": "META_0",
    "numericValue": 2,
    "value": "2",
  },
  Object {
    "entryType": "INT",
    "name": "META_1",
    "numericValue": 830,
    "value": "830",
  },
  Object {
    "entryType": "INT",
    "name": "META_2",
    "numericValue": 870,
    "value": "870",
  },
  Object {
    "comment": "Time system for HDU",
    "name": "TIMESYS",
    "value": "UTC",
  },
]
`;

exports[`FILEINFO_FITS_MULTIHDU: Testing if info of an FITS image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : spire500_ext.fits FileInfoExtended of '6': assert FILE_INFO_RESPONSE.file_info_extended.computed_entries 1`] = `
Array [
  Object {
    "name": "Name",
    "value": "spire500_ext.fits",
  },
  Object {
    "name": "HDU",
    "value": "6",
  },
  Object {
    "name": "Extension name",
    "value": "error",
  },
  Object {
    "name": "Shape",
    "value": "[830, 870]",
  },
  Object {
    "name": "Coordinate type",
    "value": "Right Ascension, Declination",
  },
  Object {
    "name": "Projection",
    "value": "TAN",
  },
  Object {
    "name": "Image reference pixels",
    "value": "[371, 421]",
  },
  Object {
    "name": "Image reference coords",
    "value": "[07:09:13.1081, -010.36.38.5952]",
  },
  Object {
    "name": "Image ref coords (deg)",
    "value": "[107.305 deg, -10.6107 deg]",
  },
  Object {
    "name": "Pixel increment",
    "value": "-14\\", 14\\"",
  },
  Object {
    "name": "Celestial frame",
    "value": "FK5, J2000",
  },
  Object {
    "name": "Pixel unit",
    "value": "MJy/sr",
  },
]
`;

exports[`FILEINFO_FITS_MULTIHDU: Testing if info of an FITS image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : spire500_ext.fits FileInfoExtended of '6': assert FILE_INFO_RESPONSE.file_info_extended.header_entries 1`] = `
Array [
  Object {
    "comment": "Standard FITS",
    "entryType": "INT",
    "name": "SIMPLE",
    "numericValue": 1,
    "value": "T",
  },
  Object {
    "entryType": "INT",
    "name": "BITPIX",
    "numericValue": -64,
    "value": "-64",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS",
    "numericValue": 2,
    "value": "2",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS1",
    "numericValue": 830,
    "value": "830",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS2",
    "numericValue": 870,
    "value": "870",
  },
  Object {
    "comment": "PHYSICAL = PIXEL*BSCALE + BZERO",
    "entryType": "FLOAT",
    "name": "BSCALE",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "BZERO",
    "value": "0.000000000000E+00",
  },
  Object {
    "name": "BTYPE",
    "value": "Intensity",
  },
  Object {
    "name": "OBJECT",
  },
  Object {
    "comment": "Brightness (pixel) unit",
    "name": "BUNIT",
    "value": "MJy/sr",
  },
  Object {
    "entryType": "FLOAT",
    "name": "EQUINOX",
    "numericValue": 2000,
    "value": "2000",
  },
  Object {
    "name": "RADESYS",
    "value": "FK5",
  },
  Object {
    "entryType": "FLOAT",
    "name": "LONPOLE",
    "numericValue": 180,
    "value": "1.800000000000E+02",
  },
  Object {
    "entryType": "FLOAT",
    "name": "LATPOLE",
    "numericValue": -10.610720896516849,
    "value": "-1.061072089652E+01",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC1_1",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC2_1",
    "value": "-0.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC1_2",
    "value": "0.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC2_2",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "name": "CTYPE1",
    "value": "RA---TAN",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRVAL1",
    "numericValue": 107.30461727023817,
    "value": "1.073046172702E+02",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CDELT1",
    "numericValue": -0.003888888888889,
    "value": "-3.888888888889E-03",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRPIX1",
    "numericValue": 371,
    "value": "371",
  },
  Object {
    "name": "CUNIT1",
    "value": "deg",
  },
  Object {
    "name": "CTYPE2",
    "value": "DEC--TAN",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRVAL2",
    "numericValue": -10.610720896516849,
    "value": "-1.061072089652E+01",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CDELT2",
    "numericValue": 0.003888888888889,
    "value": "3.888888888889E-03",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRPIX2",
    "numericValue": 421,
    "value": "421",
  },
  Object {
    "name": "CUNIT2",
    "value": "deg",
  },
  Object {
    "name": "LONGSTRN",
    "value": "OGIP 1.0",
  },
  Object {
    "name": "EXTNAME",
    "value": "error",
  },
  Object {
    "name": "CLASS___",
    "value": "herschel.ia.dataset.ArrayDataset",
  },
  Object {
    "name": "INFO____",
    "value": "Statistical error on the pixel values",
  },
  Object {
    "name": "DATA____",
    "value": "herschel.ia.numeric.Double2d",
  },
  Object {
    "name": "QTTY____",
    "value": "MJy/sr",
  },
  Object {
    "entryType": "INT",
    "name": "META_0",
    "numericValue": 2,
    "value": "2",
  },
  Object {
    "entryType": "INT",
    "name": "META_1",
    "numericValue": 830,
    "value": "830",
  },
  Object {
    "entryType": "INT",
    "name": "META_2",
    "numericValue": 870,
    "value": "870",
  },
  Object {
    "comment": "Time system for HDU",
    "name": "TIMESYS",
    "value": "UTC",
  },
]
`;

exports[`FILEINFO_FITS_MULTIHDU: Testing if info of an FITS image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : spire500_ext.fits FileInfoExtended of '7': assert FILE_INFO_RESPONSE.file_info_extended.computed_entries 1`] = `
Array [
  Object {
    "name": "Name",
    "value": "spire500_ext.fits",
  },
  Object {
    "name": "HDU",
    "value": "7",
  },
  Object {
    "name": "Extension name",
    "value": "coverage",
  },
  Object {
    "name": "Shape",
    "value": "[830, 870]",
  },
  Object {
    "name": "Coordinate type",
    "value": "Right Ascension, Declination",
  },
  Object {
    "name": "Projection",
    "value": "TAN",
  },
  Object {
    "name": "Image reference pixels",
    "value": "[371, 421]",
  },
  Object {
    "name": "Image reference coords",
    "value": "[07:09:13.1081, -010.36.38.5952]",
  },
  Object {
    "name": "Image ref coords (deg)",
    "value": "[107.305 deg, -10.6107 deg]",
  },
  Object {
    "name": "Pixel increment",
    "value": "-14\\", 14\\"",
  },
  Object {
    "name": "Celestial frame",
    "value": "FK5, J2000",
  },
  Object {
    "name": "Pixel unit",
    "value": "1",
  },
]
`;

exports[`FILEINFO_FITS_MULTIHDU: Testing if info of an FITS image file is correctly delivered by the backend Go to "set_QA" folder query the info of file : spire500_ext.fits FileInfoExtended of '7': assert FILE_INFO_RESPONSE.file_info_extended.header_entries 1`] = `
Array [
  Object {
    "comment": "Standard FITS",
    "entryType": "INT",
    "name": "SIMPLE",
    "numericValue": 1,
    "value": "T",
  },
  Object {
    "entryType": "INT",
    "name": "BITPIX",
    "numericValue": -64,
    "value": "-64",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS",
    "numericValue": 2,
    "value": "2",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS1",
    "numericValue": 830,
    "value": "830",
  },
  Object {
    "entryType": "INT",
    "name": "NAXIS2",
    "numericValue": 870,
    "value": "870",
  },
  Object {
    "comment": "PHYSICAL = PIXEL*BSCALE + BZERO",
    "entryType": "FLOAT",
    "name": "BSCALE",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "BZERO",
    "value": "0.000000000000E+00",
  },
  Object {
    "name": "BTYPE",
    "value": "Intensity",
  },
  Object {
    "name": "OBJECT",
  },
  Object {
    "comment": "Brightness (pixel) unit",
    "name": "BUNIT",
    "value": "1",
  },
  Object {
    "entryType": "FLOAT",
    "name": "EQUINOX",
    "numericValue": 2000,
    "value": "2000",
  },
  Object {
    "name": "RADESYS",
    "value": "FK5",
  },
  Object {
    "entryType": "FLOAT",
    "name": "LONPOLE",
    "numericValue": 180,
    "value": "1.800000000000E+02",
  },
  Object {
    "entryType": "FLOAT",
    "name": "LATPOLE",
    "numericValue": -10.610720896516849,
    "value": "-1.061072089652E+01",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC1_1",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC2_1",
    "value": "-0.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC1_2",
    "value": "0.000000000000E+00",
  },
  Object {
    "entryType": "FLOAT",
    "name": "PC2_2",
    "numericValue": 1,
    "value": "1.000000000000E+00",
  },
  Object {
    "name": "CTYPE1",
    "value": "RA---TAN",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRVAL1",
    "numericValue": 107.30461727023817,
    "value": "1.073046172702E+02",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CDELT1",
    "numericValue": -0.003888888888889,
    "value": "-3.888888888889E-03",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRPIX1",
    "numericValue": 371,
    "value": "371",
  },
  Object {
    "name": "CUNIT1",
    "value": "deg",
  },
  Object {
    "name": "CTYPE2",
    "value": "DEC--TAN",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRVAL2",
    "numericValue": -10.610720896516849,
    "value": "-1.061072089652E+01",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CDELT2",
    "numericValue": 0.003888888888889,
    "value": "3.888888888889E-03",
  },
  Object {
    "entryType": "FLOAT",
    "name": "CRPIX2",
    "numericValue": 421,
    "value": "421",
  },
  Object {
    "name": "CUNIT2",
    "value": "deg",
  },
  Object {
    "name": "LONGSTRN",
    "value": "OGIP 1.0",
  },
  Object {
    "name": "EXTNAME",
    "value": "coverage",
  },
  Object {
    "name": "CLASS___",
    "value": "herschel.ia.dataset.ArrayDataset",
  },
  Object {
    "name": "INFO____",
    "value": "Coverage",
  },
  Object {
    "name": "DATA____",
    "value": "herschel.ia.numeric.Double2d",
  },
  Object {
    "name": "QTTY____",
    "value": "1",
  },
  Object {
    "entryType": "INT",
    "name": "META_0",
    "numericValue": 2,
    "value": "2",
  },
  Object {
    "entryType": "INT",
    "name": "META_1",
    "numericValue": 830,
    "value": "830",
  },
  Object {
    "entryType": "INT",
    "name": "META_2",
    "numericValue": 870,
    "value": "870",
  },
  Object {
    "comment": "Time system for HDU",
    "name": "TIMESYS",
    "value": "UTC",
  },
]
`;
